syntax = "proto3";

package marginoffer.v1;

option go_package = "github.com/piske-alex/margin-offer-system/proto/gen/go";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// MarginOffer message definition
message MarginOffer {
  string id = 1;
  string offer_type = 2; // V1, BP, LV
  string collateral_token = 3;
  string borrow_token = 4;
  double available_borrow_amount = 5;
  double max_open_ltv = 6;
  double liquidation_ltv = 7;
  double interest_rate = 8;
  string interest_model = 9; // fixed, floating
  optional int32 term_days = 10;
  string liquidity_source = 11;
  optional string lender_address = 12;
  optional google.protobuf.Timestamp last_borrowed_timestamp = 13;
  google.protobuf.Timestamp created_timestamp = 14;
  google.protobuf.Timestamp updated_timestamp = 15;
  optional string source = 16; // e.g., "marginfi", "jupiter", "manual"
}

// OverwriteFilter message definition
message OverwriteFilter {
  optional string offer_type = 1;
  optional string collateral_token = 2;
  optional string borrow_token = 3;
  optional string lender_address = 4;
  optional string liquidity_source = 5;
  optional string source = 6;
  optional google.protobuf.Timestamp created_after = 7;
  optional google.protobuf.Timestamp created_before = 8;
  optional google.protobuf.Timestamp updated_after = 9;
  optional google.protobuf.Timestamp updated_before = 10;
}

// Request messages
message CreateMarginOfferRequest {
  MarginOffer offer = 1;
}

message GetMarginOfferRequest {
  string id = 1;
}

message UpdateMarginOfferRequest {
  MarginOffer offer = 1;
}

message CreateOrUpdateMarginOfferRequest {
  MarginOffer offer = 1;
}

message DeleteMarginOfferRequest {
  string id = 1;
}

message ListMarginOffersRequest {
  int32 limit = 1;
  int32 offset = 2;
  optional string sort_by = 3;
  optional string sort_order = 4;
  
  // Filters
  optional string offer_type = 5;
  optional string collateral_token = 6;
  optional string borrow_token = 7;
  optional string interest_model = 8;
  optional string liquidity_source = 9;
  optional string lender_address = 10;
  optional string source = 11;
  
  // Range filters
  optional double min_borrow_amount = 12;
  optional double max_borrow_amount = 13;
  optional double min_interest_rate = 14;
  optional double max_interest_rate = 15;
  
  // Time filters
  optional google.protobuf.Timestamp created_after = 16;
  optional google.protobuf.Timestamp created_before = 17;
  
  // Status filters
  bool include_expired = 18;
  bool active_only = 19;
}

message BulkCreateMarginOffersRequest {
  repeated MarginOffer offers = 1;
  bool ignore_conflicts = 2;
  bool validate_all = 3;
}

message BulkUpdateMarginOffersRequest {
  repeated MarginOffer offers = 1;
  bool upsert = 2;
  bool partial_update = 3;
}

message BulkCreateOrUpdateMarginOffersRequest {
  repeated MarginOffer offers = 1;
  bool validate_all = 2;
}

message BulkOverwriteMarginOffersRequest {
  repeated MarginOffer offers = 1;
  optional OverwriteFilter filter = 2;
  bool validate_all = 3;
  bool dry_run = 4;
}

message BulkDeleteMarginOffersRequest {
  repeated string ids = 1;
  bool ignore_not_found = 2;
}

message OverwritePreviewRequest {
  optional OverwriteFilter filter = 1;
}

// Response messages
message CreateMarginOfferResponse {
  MarginOffer offer = 1;
}

message GetMarginOfferResponse {
  MarginOffer offer = 1;
}

message UpdateMarginOfferResponse {
  MarginOffer offer = 1;
}

message CreateOrUpdateMarginOfferResponse {
  MarginOffer offer = 1;
  bool was_created = 2; // true if created, false if updated
}

message ListMarginOffersResponse {
  repeated MarginOffer offers = 1;
  int64 total = 2;
  int32 limit = 3;
  int32 offset = 4;
  bool has_more = 5;
  optional int32 next_offset = 6;
}

message BulkOperationResponse {
  int32 success_count = 1;
  int32 failure_count = 2;
  repeated BulkError errors = 3;
  repeated string processed_ids = 4;
}

message BulkOverwriteResponse {
  int32 deleted_count = 1;
  int32 created_count = 2;
  repeated string deleted_ids = 3;
  repeated string created_ids = 4;
  repeated BulkError errors = 5;
}

message OverwritePreviewResponse {
  int32 affected_count = 1;
  repeated string affected_ids = 2;
}

message BulkError {
  int32 index = 1;
  string id = 2;
  string error = 3;
  string code = 4;
}

message HealthCheckResponse {
  string status = 1;
  google.protobuf.Timestamp timestamp = 2;
  string version = 3;
  map<string, string> checks = 4;
}

// Subscription messages
message SubscribeMarginOffersRequest {
  // Filter for specific types of changes
  optional string offer_type = 1;
  optional string collateral_token = 2;
  optional string borrow_token = 3;
  optional string liquidity_source = 4;
  optional string lender_address = 5;
  optional string source = 6;
  
  // Subscribe to specific change types
  bool subscribe_created = 7;
  bool subscribe_updated = 8;
  bool subscribe_deleted = 9;
  bool subscribe_overwritten = 10;
  
  // Client identification
  string client_id = 11;
  string session_id = 12;
}

message MarginOfferChange {
  enum ChangeType {
    UNKNOWN = 0;
    CREATED = 1;
    UPDATED = 2;
    DELETED = 3;
    OVERWRITTEN = 4;
  }
  
  ChangeType change_type = 1;
  MarginOffer offer = 2;
  google.protobuf.Timestamp timestamp = 3;
  string source = 4; // e.g., "backfiller", "api", "manual"
  string operation_id = 5; // Unique ID for the operation that caused this change
  map<string, string> metadata = 6; // Additional context about the change
}

message SubscribeMarginOffersResponse {
  oneof event {
    MarginOfferChange change = 1;
    SubscriptionHeartbeat heartbeat = 2;
    SubscriptionError error = 3;
  }
}

message SubscriptionHeartbeat {
  google.protobuf.Timestamp timestamp = 1;
  string client_id = 2;
  string session_id = 3;
}

message SubscriptionError {
  string error_code = 1;
  string error_message = 2;
  google.protobuf.Timestamp timestamp = 3;
  bool fatal = 4; // If true, the subscription should be terminated
}

// Service definition
service MarginOfferService {
  // CRUD operations
  rpc CreateMarginOffer(CreateMarginOfferRequest) returns (CreateMarginOfferResponse);
  rpc GetMarginOffer(GetMarginOfferRequest) returns (GetMarginOfferResponse);
  rpc UpdateMarginOffer(UpdateMarginOfferRequest) returns (UpdateMarginOfferResponse);
  rpc DeleteMarginOffer(DeleteMarginOfferRequest) returns (google.protobuf.Empty);
  
  // CreateOrUpdate operation (upsert)
  rpc CreateOrUpdateMarginOffer(CreateOrUpdateMarginOfferRequest) returns (CreateOrUpdateMarginOfferResponse);
  
  // List operations
  rpc ListMarginOffers(ListMarginOffersRequest) returns (ListMarginOffersResponse);
  
  // Bulk operations
  rpc BulkCreateMarginOffers(BulkCreateMarginOffersRequest) returns (BulkOperationResponse);
  rpc BulkUpdateMarginOffers(BulkUpdateMarginOffersRequest) returns (BulkOperationResponse);
  rpc BulkDeleteMarginOffers(BulkDeleteMarginOffersRequest) returns (BulkOperationResponse);
  
  // Bulk CreateOrUpdate operations (upsert)
  rpc BulkCreateOrUpdateMarginOffers(BulkCreateOrUpdateMarginOffersRequest) returns (BulkOperationResponse);
  
  // Bulk overwrite operations
  rpc BulkOverwriteMarginOffers(BulkOverwriteMarginOffersRequest) returns (BulkOverwriteResponse);
  rpc OverwritePreview(OverwritePreviewRequest) returns (OverwritePreviewResponse);
  
  // Health check
  rpc HealthCheck(google.protobuf.Empty) returns (HealthCheckResponse);
  
  // Subscription service
  rpc SubscribeMarginOffers(SubscribeMarginOffersRequest) returns (stream SubscribeMarginOffersResponse);
}